ingress-controller/ingress-example3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-3
spec:
  rules:
    - host: helloworld-v3.example.com
      http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: apiservice
                port:
                  number: 80
  tls:
    - secretName: ssh-secret
